--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <meta name="author" content="Mikael Engström">
 
 </head>
-<body>
+<body class="p-3 bg-warning">
+    <div class="bg-light p-3" style="margin: auto; width: 60vw">
     <h1 class="display-1">Internethistorik</h1>
+    <img src="monitor-1307227_1280.jpg" style="width: 55vw"><br>
     <a href="info.html">Läs mer om Internets historia i Sverige</a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </div>
 </body>
 </html>
