--- a/info.html
+++ b/info.html
@@ -19,7 +19,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
 </head>
-<body>
+<body class="p-3 bg-warning">
+    <div class="bg-light p-3" style="margin: auto; width: 60vw">
     <h1 class="display-1">Internets historia i Sverige</h1>
     <p>
 
@@ -49,7 +50,7 @@ Sammanfattningsvis har internet spelat en avgörande roll i Sveriges teknologisk
 
     </p>
     <a href="index.html">Tillbaka till startsidan</a>
-
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
