--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startsidan</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <meta name="description" content="Information om Sveriges Internehistoria">
+    <meta name="description" content="Information om Sveriges Internethistoria">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Mikael Engström">
 
