Added Google Analytics

--- a/info.html
+++ b/info.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1T93WEQEKJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1T93WEQEKJ');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <meta name="description" content="En fantastisk sida om allt du behöver veta om Internets historia i Sverige">
     <meta name="keywords" content="internet, web, webb, sverige, historik, historia">
     <meta name="author" content="Mikael Engström">
